Message list may be unsorted in unified folder after changing to unthreaded view
Categories
(Thunderbird :: Folder and Message Lists, defect)
Tracking
(thunderbird_esr115 wontfix)
Tracking | Status | |
---|---|---|
thunderbird_esr115 | --- | wontfix |
People
(Reporter: welpy-cw, Assigned: welpy-cw)
References
Details
Attachments
(1 file)
Steps to reproduce:
- Create a new saved search covering at least two folders.
- Select "Sort by" -> "Unthreaded".
Expected result:
The message list appears unthreaded and sorted by the current sort order.
Actual result:
The message list appears unthreaded and unsorted.
Assignee | ||
Comment 1•1 year ago
|
||
As soon as another sort order is chosen in that saved search the bug seems to be gone, so apparently a set secondary sort makes a difference:
Setting the view flags issues a resort in DBViewWrapper
which isn't performed by nsMsgDBView if a secondary sort isn't set yet. This is only visible when changing to unthreaded, since rebuilding the view threaded or grouped automatically ensures the right order. So the resort invoked by DBViewWrapper
isn't only unnecessary in theses case, it also leads to rebuilding the view for a second time.
Assignee | ||
Comment 2•1 year ago
|
||
Resorting the messages is only necessary when changing from threaded or grouped to unthreaded.
Updated•1 year ago
|
Assignee | ||
Updated•1 year ago
|
Updated•1 year ago
|
Assignee | ||
Updated•1 year ago
|
Pushed by geoff@darktrojan.net:
https://hg.mozilla.org/comm-central/rev/f1893dbe22c4
Fix setting view flags for cross-folder/synthetic search views. r=mkmelin
Updated•1 year ago
|
Assignee | ||
Updated•1 year ago
|
Assignee | ||
Updated•1 year ago
|
Description
•