Bug 1893793 - Fix setting view flags for cross-folder/synthetic search views. r=mkmelin

Resorting the messages is only necessary when changing from threaded or grouped to unthreaded.

Differential Revision: https://phabricator.services.mozilla.com/D208830

--HG--
extra : amend_source : 81cc22b8e615e0959a36b214a4e590d47e370a07